--- a/index.html
+++ b/index.html
@@ -60,13 +60,11 @@
 
         <!--=================================================================================================-->
                                                     <!-- OFFER SECTION -->
-        <section class="offer">
-            <div class="offer__info wrapper"><!-- start offerInfo -->
-                <h1>Free advice from our</h1>
-                <button class="button">Request a free consultation</button>
-            </div><!-- end offerInfo -->
-        </section><!-- end offer section --> 
-
+        <main>
+            <div class="wrapper">
+                
+            </div><!-- end wrapper -->
+        </main><!-- end main -->
 
   	    <!-- //////////////////////////////////////////////////////////////////////// -->
 
