--- a/index.html
+++ b/index.html
@@ -36,19 +36,38 @@
                     </defs>
                 </svg>
             </div> <!-- clipMask -->
-            
+
             <div class="wrapper">
                 
                 <nav class="mainNav"><!-- start navigation -->
+                    <p>menu</p>
                     <ul>
-                        <li><a href="#" class="active">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Practive</a></li>
-                        <li><a href="#">Lawyers</a></li>
-                        <li><a href="#">Media</a></li>
+                        <li><a href="#" class="active">About hostel</a></li>
+                        <li><a href="#">Rooms</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Gallery</a></li>
                         <li><a href="#">Contacts</a></li>
                     </ul>
                 </nav><!-- end nav -->
+
+                <ul class="advantagestSlider">
+                    <li>
+                        <span>QUALITY CERTIFICATE IN 2016</span>
+                        <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                    </li>
+                     <li>
+                        <span>QUALITY CERTIFICATE IN 2016</span>
+                        <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                    </li>
+                     <li>
+                        <span>QUALITY CERTIFICATE IN 2016</span>
+                        <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                    </li>
+                     <li>
+                        <span>QUALITY CERTIFICATE IN 2016</span>
+                        <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                    </li>
+                </ul>
 
             </div><!-- end wrapper -->
         </header><!-- end header -->
