--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
                 </ul>
 
                 <div class="shadow"></div>
-
+                <footer>
+                    <div class="social">
+                        <a href="" class="social__item social__item--fb"></a>
+                        <a href="" class="social__item social__item--vm"></a>
+                        <a href="" class="social__item social__item--tw"></a>
+                        <a href="" class="social__item social__item--inst"></a>
+                    </div>
+                    <div class="builtAt">built at: <span>gamidov studio</span></div>
+                </footer>
             </div><!-- end wrapper -->
         </header><!-- end header -->
         
@@ -71,15 +79,29 @@
                 <span class="menu-line middle_line"></span>
                 <span class="menu-line bottom_line"></span>
             </button><!-- end toggle mobile menu -->
+            <p class="copyright">© 2016. GRAND HOSTEL</p>
         </aside>
 
 
         <!--=================================================================================================-->
                                                     <!-- OFFER SECTION -->
-        <main style="background-image: url(images/main_slide_1.jpg)">
-            <div class="wrapper">
-
-            </div><!-- end wrapper -->
+        <main>
+            <div class="mainslider">
+                <div class="mainslider__slide" style="background-image: url(images/main_slide_1.jpg)">
+                    <div class="wrapper">
+                        <h2>“Grand Hostel” - One of the unique opportunity where you can stay in the center of Baku.</h2>
+                        <p>Hostel is a clean, comfortable and centrally located place for internship and budget business travellers who are looking for a warm, local, homely atmosphere and an affordable quality hostel in Baku.</p>
+                        <button class="button">Choose room</button>
+                    </div>
+                </div>
+                <div class="mainslider__slide" style="background-image: url(images/main_slide_1.jpg)">
+                    <div class="wrapper">
+                        <h2>“Grand Hostel” - One of the unique opportunity where you can stay in the center of Baku.</h2>
+                        <p>Hostel is a clean, comfortable and centrally located place for internship and budget business travellers who are looking for a warm, local, homely atmosphere and an affordable quality hostel in Baku.</p>
+                        <button class="button">Choose room</button>
+                    </div>
+                </div>
+            </div>
         </main><!-- end main -->
 
   	    <!-- //////////////////////////////////////////////////////////////////////// -->
