--- a/rooms.html
+++ b/rooms.html
@@ -87,46 +87,56 @@
                                                     <!-- OFFER SECTION -->
 
         <main class="viewport">
-            <div class="column column--content column--full">
+            <div class="column column--content column--full content">
                 <h1 class="heading">01. ABOUT HOSTEL</h1>
                 <h2>We worked so hard to ensure that guests feel as comfortable as we</h2>
 
                 <div class="rooms">
                     <div class="room">
-                        <div class="room__img">
-                            <img src="images/room_1.jpg" alt="">
+                        <div class="room__card">
+                            <div class="room__img">
+                                <img src="images/room_1.jpg" alt="">
+                            </div>
+                            <div class="room__info">
+                                <h3>TWO-BEDDED ROOM, 14 SQ.M.</h3>
+                                <div class="room__info__include">
+                                    <span class="room__info__include__count">(2)</span>
+                                    <span class="room__info__include__meal">Breakfast +</span>
+                                    <span class="room__info__include__rent">50</span>
+                                </div>   
+                            </div>
                         </div>
-                        <div class="room__info">
-                            <h3>TWO-BEDDED ROOM, 14 SQ.M.</h3>
-                            <div class="room__info__include">
-                                <span class="room__info__include__count">(2)</span>
-                                <span class="room__info__include__meal">Breakfast +</span>
-                                <span class="room__info__include__rent">50</span>
-                            </div>   
-                            <div class="room__info__details viewport viewport--flex hiddenInfo">  <!-- details abot room -->
-                                <div class="column column--content">
-                                    <button class="back">Назад</button>
-                                    <article class="content scroll">
-                                        <h2 class="heading">02. rooms</h2>
-                                        <h3>We worked so hard to ensure that guests feel as comfortable as we</h3>
-                                        <hr>
-                                        <p>Our guests can enjoy completely free spacious kitchen-dining room, equipped with all necessary utensils and appliances, from refrigerators and cooking surfaces prior to the microwave oven and dishwasher.</p>
-                                        <p>Collecting bags in the street, do not worry about a bulky iron and hair dryer. In our hostel all it is freely available. You may even be able to wash their stuff absolutely free in our washing machine. And yet we can always buy daily necessities slippers, toothpaste, etc.</p>
-                                        <p>After a hard day’s work or an exhausting trip, you can relax in the common room, play board games, or kicker, pet chinchillas - permanent residents “Hostel” - or to play music on the piano. All amenities are located on the floor: 3 toilets and 3 showers. The highlight of the “other hostels” is a room with an infrared sauna and separate shower.</p>
-                                        <p>Our helpful and friendly staff is available 24/7. At your request, the administrator can order w / e and tickets. The hostel has free Wi-Fi. For your convenience we have a bank terminal, which accepts Visa cards, Mastercard, Maestro.</p>
-                                    </article> <!-- end content -->
-                                    <a href="#" class="services-link">Free & Paid services</a>
-                                </div> <!-- end column -->
-
-                                <div class="column column--media">
-                                    <div class="roomslider">
-                                        <div class="slide" data-image="images/slide-1.jpg"></div>
-                                        <div class="slide" data-image="images/slide-2.jpg"></div>
-                                        <div class="slide" data-image="images/slide-3.jpg"></div>
+                        <div class="room__info__details viewport viewport--flex">  <!-- details abot room -->
+                            <div class="column column--content">
+                                <button class="back">Назад</button>
+                                <article class="content scroll">
+                                    <span class="heading">02. rooms</span>
+                                    <h2>We worked so hard to ensure that guests feel as comfortable as we</h2>
+                                    <hr>
+                                    <p>Our guests can enjoy completely free spacious kitchen-dining room, equipped with all necessary utensils and appliances, from refrigerators and cooking surfaces prior to the microwave oven and dishwasher.</p>
+                                    <div class="services">
+                                        <div class="paid">
+                                            <h3 class="services__title">PAID SERVICES:</h3>
+                                            <ul class="services__list">
+                                                <li>Landmark View</li>
+                                                <li>View Of The City</li>
+                                                <li>Air Conditioning</li>
+                                                <li>Ironing Facilities</li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                </div> <!-- end room slider-->
-                            </div>  <!-- end room details -->
-                        </div>
+                                </article> <!-- end content -->
+                                <a href="#" class="services-link">Free & Paid services</a>
+                            </div> <!-- end column -->
+
+                            <div class="column column--media">
+                                <div class="roomslider">
+                                    <div class="slide" data-image="images/slide-1.jpg"></div>
+                                    <div class="slide" data-image="images/slide-2.jpg"></div>
+                                    <div class="slide" data-image="images/slide-3.jpg"></div>
+                                </div>
+                            </div> <!-- end room slider-->
+                        </div>  <!-- end room details -->
                     </div>
 
                     <div class="room">
