--- a/rooms.html
+++ b/rooms.html
@@ -87,7 +87,7 @@
                                                     <!-- OFFER SECTION -->
 
         <main class="viewport">
-            <div class="column column--content column--full content">
+            <div class="column column--content column--full content scroll">
                 <h1 class="heading">01. ABOUT HOSTEL</h1>
                 <h2>We worked so hard to ensure that guests feel as comfortable as we</h2>
 
@@ -226,6 +226,7 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="http://maps.googleapis.com/maps/api/js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.12/js/perfect-scrollbar.jquery.js"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/jquery.magnific-popup.min.js"></script>
