google map integration

--- a/contacts.html
+++ b/contacts.html
@@ -68,12 +68,8 @@
                 </article> <!-- end content -->
             </div> <!-- end column -->
 
-            <div class="column column--media">
-                <div class="slider">
-                    <div class="slide" data-image="images/slide-1.jpg"></div>
-                    <div class="slide" data-image="images/slide-2.jpg"></div>
-                    <div class="slide" data-image="images/slide-3.jpg"></div>
-                </div>
+            <div class="column column--media column--map">
+                <div class="map" id="map_canvas" data-lat="40.38257828125999" data-lng="49.893293380737305"></div>
             </div> <!-- end column -->
         </main><!-- end main -->
 
@@ -93,6 +89,7 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.12/js/perfect-scrollbar.jquery.js"></script>
+        <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB-S5heOTV4eiDgfZsG7HMN5tD0DRQYryk"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/jquery.magnific-popup.min.js"></script>
