--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <header class="sideMenu">
             <div class="circle"></div>
 
-            <div class="wrapper">
+            <div class="wrapper scroll">
 
                 <nav class="mainNav"><!-- start navigation -->
                     <p>menu</p>
@@ -121,6 +121,7 @@
         <script src="http://maps.googleapis.com/maps/api/js"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.12/js/perfect-scrollbar.jquery.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/jquery.magnific-popup.min.js"></script>
 
         <script src="js/main.js"></script>
