--- a/rooms.html
+++ b/rooms.html
@@ -106,11 +106,10 @@
                                 </div>   
                             </div>
                         </div>
-                        <div class="room__info__details viewport viewport--flex">  <!-- details abot room -->
+                        <div class="room__info__details viewport viewport--flex scroll">  <!-- details abot room -->
                             <div class="column column--content">
-                                <button class="back">Назад</button>
                                 <article class="content scroll">
-                                    <span class="heading">02. rooms</span>
+                                    <span class="heading">02. rooms <button class="back"><i>&larr;</i> Back</button></span>
                                     <h2>We worked so hard to ensure that guests feel as comfortable as we</h2>
                                     <hr>
                                     <p>Our guests can enjoy completely free spacious kitchen-dining room, equipped with all necessary utensils and appliances, from refrigerators and cooking surfaces prior to the microwave oven and dishwasher.</p>
