--- a/index.html
+++ b/index.html
@@ -32,30 +32,38 @@
                 <nav class="mainNav"><!-- start navigation -->
                     <p>menu</p>
                     <ul>
-                        <li><a href="#" class="active">About hostel</a></li>
-                        <li><a href="#">Rooms</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Gallery</a></li>
-                        <li><a href="#">Contacts</a></li>
+                        <li><a href="about.html" class="active">About hostel</a></li>
+                        <li><a href="rooms.html">Rooms</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="contacts.html">Contacts</a></li>
                     </ul>
                 </nav><!-- end nav -->
 
                 <ul class="advantagestSlider">
                     <li>
-                        <span>QUALITY CERTIFICATE IN 2016</span>
-                        <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                        <a href="">
+                            <span>QUALITY CERTIFICATE IN 2016</span>
+                            <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                        </a>
                     </li>
-                     <li>
-                        <span>QUALITY CERTIFICATE IN 2016</span>
-                        <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                    <li>
+                        <a href="">
+                            <span>QUALITY CERTIFICATE IN 2016</span>
+                            <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                        </a>
                     </li>
-                     <li>
-                        <span>QUALITY CERTIFICATE IN 2016</span>
-                        <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                    <li>
+                        <a href="">
+                            <span>QUALITY CERTIFICATE IN 2016</span>
+                            <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                        </a>
                     </li>
-                     <li>
-                        <span>QUALITY CERTIFICATE IN 2016</span>
-                        <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                    <li>
+                        <a href="">
+                            <span>QUALITY CERTIFICATE IN 2016</span>
+                            <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                        </a>
                     </li>
                 </ul>
 
