--- a/about.html
+++ b/about.html
@@ -77,6 +77,16 @@
                 </footer>
             </div><!-- end wrapper -->
         </header><!-- end header -->
+
+        <aside class="sidebar">
+            <img src="images/logo.jpg" alt="">
+            <button class="menu-button"> 
+                <span class="menu-line top_line"></span>
+                <span class="menu-line middle_line"></span>
+                <span class="menu-line bottom_line"></span>
+            </button><!-- end toggle mobile menu -->
+            <p class="copyright">© 2016. GRAND HOSTEL</p>
+        </aside>
        
         <!--=================================================================================================-->
                                                     <!-- OFFER SECTION -->
