--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <div class="wrapper scroll">
 
                 <nav class="mainNav"><!-- start navigation -->
-                    <p>menu</p>
+                    <p class="heading">menu</p>
                     <ul>
                         <li><a href="about.html" class="active">About hostel</a></li>
                         <li><a href="rooms.html">Rooms</a></li>
@@ -79,7 +79,7 @@
         </header><!-- end header -->
 
         <aside class="sidebar">
-            <img src="images/logo.jpg" alt="">
+            <a href="index.html"><img src="images/logo.jpg" alt=""></a>
             <button class="menu-button"> 
                 <span class="menu-line top_line"></span>
                 <span class="menu-line middle_line"></span>
