--- a/rooms.html
+++ b/rooms.html
@@ -30,7 +30,7 @@
             <div class="wrapper scroll">
 
                 <nav class="mainNav"><!-- start navigation -->
-                    <p>menu</p>
+                    <p class="heading">menu</p>
                     <ul>
                         <li><a href="about.html" class="active">About hostel</a></li>
                         <li><a href="rooms.html">Rooms</a></li>
@@ -81,7 +81,7 @@
         </header><!-- end header -->
         
         <aside class="sidebar">
-            <img src="images/logo.jpg" alt="">
+            <a href="index.html"><img src="images/logo.jpg" alt=""></a>
             <button class="menu-button"> 
                 <span class="menu-line top_line"></span>
                 <span class="menu-line middle_line"></span>
@@ -174,6 +174,32 @@
                         </div><!-- end room info -->
                     </div><!-- end room -->
 
+                    <div class="room">
+                        <div class="room__img">
+                            <img src="images/room_1.jpg" alt="">
+                        </div>
+                        <div class="room__info">
+                            <h3>TWO-BEDDED ROOM, 14 SQ.M.</h3>
+                            <div class="room__info__include">
+                                <span class="room__info__include__count">(2)</span>
+                                <span class="room__info__include__meal">Breakfast +</span>
+                                <span class="room__info__include__rent">50</span>
+                            </div>   
+                        </div>
+                    </div>
+                    <div class="room">
+                        <div class="room__img">
+                            <img src="images/room_1.jpg" alt="">
+                        </div>
+                        <div class="room__info">
+                            <h3>TWO-BEDDED ROOM, 14 SQ.M.</h3>
+                            <div class="room__info__include">
+                                <span class="room__info__include__count">(2)</span>
+                                <span class="room__info__include__meal">Breakfast +</span>
+                                <span class="room__info__include__rent">50</span>
+                            </div>   
+                        </div>
+                    </div>
                     <div class="room">
                         <div class="room__img">
                             <img src="images/room_1.jpg" alt="">
