--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
        
         <!--=================================================================================================-->
                                                     <!-- OFFER SECTION -->
-        <main class="viewport viewport--flex scroll">
+        <main class="viewport viewport--flex">
 
             <div class="column column--content">
                 <article class="content scroll">
