add unice menu-scroll

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <header class="sideMenu">
             <div class="circle"></div>
 
-            <div class="wrapper scroll">
+            <div class="wrapper menu-scroll">
 
                 <nav class="mainNav"><!-- start navigation -->
                     <p class="heading">menu</p>
