--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
         <header class="sideMenu">
             <div class="circle"></div>
 
-            <div class="wrapper scroll">
+            <div class="wrapper menu-scroll">
 
                 <nav class="mainNav"><!-- start navigation -->
                     <p class="heading">menu</p>
