--- a/index.html
+++ b/index.html
@@ -95,21 +95,17 @@
                                                     <!-- OFFER SECTION -->
 
         <div class="mainslider">
-            <div class="mainslider__slide" style="background-image: url(images/main_slide_1.jpg)">
-                <div class="wrap">
-                    <h2>“Grand Hostel” - One of the unique opportunity where you can stay in the center of Baku.</h2>
-                    <p>Hostel is a clean, comfortable and centrally located place for internship and budget business travellers who are looking for a warm, local, homely atmosphere and an affordable quality hostel in Baku.</p>
-                    <button class="button">Choose room</button>
-                </div>
-            </div>
-            <div class="mainslider__slide" style="background-image: url(images/main_slide_1.jpg)">
-                <div class="wrap">
-                    <h2>“Grand Hostel” - One of the unique opportunity where you can stay in the center of Baku.</h2>
-                    <p>Hostel is a clean, comfortable and centrally located place for internship and budget business travellers who are looking for a warm, local, homely atmosphere and an affordable quality hostel in Baku.</p>
-                    <button class="button">Choose room</button>
-                </div>
-            </div>
+            <div class="mainslider__slide" style="background-image: url(images/main_slide_1.jpg)"></div>
+            <div class="mainslider__slide" style="background-image: url(images/gallery-1.jpg)"></div>
         </div>
+
+        <main class="viewport viewport--flex indexMain">
+            <div class="wrap">
+                <h2>“Grand Hostel” - One of the unique opportunity where you can stay in the center of Baku.</h2>
+                <p>Hostel is a clean, comfortable and centrally located place for internship and budget business travellers who are looking for a warm, local, homely atmosphere and an affordable quality hostel in Baku.</p>
+                <a href="rooms.html" class="button">Choose room</a>
+            </div>
+        </main>
 
   	    <!-- //////////////////////////////////////////////////////////////////////// -->
 
