--- a/index.html
+++ b/index.html
@@ -25,58 +25,59 @@
         <!--=================================================================================================-->
                                                     <!-- HEADER --> 
         <header class="sideMenu">
-            <div class="circle"></div>
 
-            <div class="wrapper menu-scroll">
+            <div class="wrapper">
+                <div class="circle"></div>
+                <div class="wrapHeadInfo menu-scroll">
+                    <nav class="mainNav"><!-- start navigation -->
+                        <p class="heading">menu</p>
+                        <ul>
+                            <li><a href="about.html" class="active">About hostel</a></li>
+                            <li><a href="rooms.html">Rooms</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="gallery.html">Gallery</a></li>
+                            <li><a href="contacts.html">Contacts</a></li>
+                        </ul>
+                    </nav><!-- end nav -->
 
-                <nav class="mainNav"><!-- start navigation -->
-                    <p class="heading">menu</p>
-                    <ul>
-                        <li><a href="about.html" class="active">About hostel</a></li>
-                        <li><a href="rooms.html">Rooms</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="contacts.html">Contacts</a></li>
+                    <ul class="advantagestSlider">
+                        <li>
+                            <a href="">
+                                <span>QUALITY CERTIFICATE IN 2016</span>
+                                <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span>QUALITY CERTIFICATE IN 2016</span>
+                                <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span>QUALITY CERTIFICATE IN 2016</span>
+                                <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span>QUALITY CERTIFICATE IN 2016</span>
+                                <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                            </a>
+                        </li>
                     </ul>
-                </nav><!-- end nav -->
 
-                <ul class="advantagestSlider">
-                    <li>
-                        <a href="">
-                            <span>QUALITY CERTIFICATE IN 2016</span>
-                            <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>QUALITY CERTIFICATE IN 2016</span>
-                            <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>QUALITY CERTIFICATE IN 2016</span>
-                            <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>QUALITY CERTIFICATE IN 2016</span>
-                            <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
-                        </a>
-                    </li>
-                </ul>
-
-                <div class="shadow"></div>
-                <footer>
-                    <div class="social">
-                        <a href="" class="social__item social__item--fb"></a>
-                        <a href="" class="social__item social__item--vm"></a>
-                        <a href="" class="social__item social__item--tw"></a>
-                        <a href="" class="social__item social__item--inst"></a>
-                    </div>
-                    <div class="builtAt">built at: <span>gamidov studio</span></div>
-                </footer>
+                    <div class="shadow"></div>
+                    <footer>
+                        <div class="social">
+                            <a href="" class="social__item social__item--fb"></a>
+                            <a href="" class="social__item social__item--vm"></a>
+                            <a href="" class="social__item social__item--tw"></a>
+                            <a href="" class="social__item social__item--inst"></a>
+                        </div>
+                        <div class="builtAt">built at: <span>gamidov studio</span></div>
+                    </footer>
+                </div>    
             </div><!-- end wrapper -->
         </header><!-- end header -->
         
@@ -100,10 +101,16 @@
         </div>
 
         <main class="viewport viewport--flex indexMain">
-            <div class="wrap">
+            <div class="wrap content">
+                <h1 class="heading heading--white">Introduction</h1>
                 <h2>“Grand Hostel” - One of the unique opportunity where you can stay in the center of Baku.</h2>
                 <p>Hostel is a clean, comfortable and centrally located place for internship and budget business travellers who are looking for a warm, local, homely atmosphere and an affordable quality hostel in Baku.</p>
                 <a href="rooms.html" class="button">Choose room</a>
+            </div>
+            <div class="languages">
+                <a href="" class="languages__item">Az</a>
+                <a href="" class="languages__item active">En</a>
+                <a href="" class="languages__item">Ru</a>
             </div>
         </main>
 
