--- a/rooms.html
+++ b/rooms.html
@@ -25,58 +25,59 @@
         <!--=================================================================================================-->
                                                     <!-- HEADER --> 
         <header class="sideMenu">
-            <div class="circle"></div>
 
-            <div class="wrapper menu-scroll">
+            <div class="wrapper">
+                <div class="circle"></div>
+                <div class="wrapHeadInfo menu-scroll">
+                    <nav class="mainNav"><!-- start navigation -->
+                        <p class="heading">menu</p>
+                        <ul>
+                            <li><a href="about.html" class="active">About hostel</a></li>
+                            <li><a href="rooms.html">Rooms</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="gallery.html">Gallery</a></li>
+                            <li><a href="contacts.html">Contacts</a></li>
+                        </ul>
+                    </nav><!-- end nav -->
 
-                <nav class="mainNav"><!-- start navigation -->
-                    <p class="heading">menu</p>
-                    <ul>
-                        <li><a href="about.html" class="active">About hostel</a></li>
-                        <li><a href="rooms.html">Rooms</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="contacts.html">Contacts</a></li>
+                    <ul class="advantagestSlider">
+                        <li>
+                            <a href="">
+                                <span>QUALITY CERTIFICATE IN 2016</span>
+                                <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span>QUALITY CERTIFICATE IN 2016</span>
+                                <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span>QUALITY CERTIFICATE IN 2016</span>
+                                <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span>QUALITY CERTIFICATE IN 2016</span>
+                                <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
+                            </a>
+                        </li>
                     </ul>
-                </nav><!-- end nav -->
 
-                <ul class="advantagestSlider">
-                    <li>
-                        <a href="">
-                            <span>QUALITY CERTIFICATE IN 2016</span>
-                            <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>QUALITY CERTIFICATE IN 2016</span>
-                            <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>QUALITY CERTIFICATE IN 2016</span>
-                            <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>QUALITY CERTIFICATE IN 2016</span>
-                            <p>Grand Hostel was awarded the quality certificate in 2016 from the TripAdvisor ...</p>
-                        </a>
-                    </li>
-                </ul>
-
-                <div class="shadow"></div>
-                <footer>
-                    <div class="social">
-                        <a href="" class="social__item social__item--fb"></a>
-                        <a href="" class="social__item social__item--vm"></a>
-                        <a href="" class="social__item social__item--tw"></a>
-                        <a href="" class="social__item social__item--inst"></a>
-                    </div>
-                    <div class="builtAt">built at: <span>gamidov studio</span></div>
-                </footer>
+                    <div class="shadow"></div>
+                    <footer>
+                        <div class="social">
+                            <a href="" class="social__item social__item--fb"></a>
+                            <a href="" class="social__item social__item--vm"></a>
+                            <a href="" class="social__item social__item--tw"></a>
+                            <a href="" class="social__item social__item--inst"></a>
+                        </div>
+                        <div class="builtAt">built at: <span>gamidov studio</span></div>
+                    </footer>
+                </div>    
             </div><!-- end wrapper -->
         </header><!-- end header -->
         
