--- a/contacts.html
+++ b/contacts.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Hostel</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"><!--[if IE]>
         <meta http-equiv="ImageResize" content="no">
         <meta http-equiv="ImageToolbar" content="no">
@@ -14,7 +14,8 @@
         <meta property="og:description" content="">
         <meta property="og:image" content="">
         <meta name="google-site-verification" content="">
-        <!--<link rel="shortcut icon" href="images/favicon.ico">-->
+
+        <link rel="icon" type="image/png" href="images/favicon.png" />
         
         <link rel="stylesheet" href="css/general.css">
     </head>
@@ -69,10 +70,10 @@
                     <div class="shadow"></div>
                     <footer>
                         <div class="social">
-                            <a href="" class="social__item social__item--fb"></a>
-                            <a href="" class="social__item social__item--vm"></a>
-                            <a href="" class="social__item social__item--tw"></a>
-                            <a href="" class="social__item social__item--inst"></a>
+                            <a href="" class="social__item social__item fb"></a>
+                            <a href="" class="social__item social__item vm"></a>
+                            <a href="" class="social__item social__item tw"></a>
+                            <a href="" class="social__item social__item lnk"></a>
                         </div>
                         <div class="builtAt">built at: <span>gamidov studio</span></div>
                     </footer>
@@ -116,10 +117,10 @@
                             </div>
 
                             <div class="social">
-                                <a href="" class="social__item social__item--fb"></a>
-                                <a href="" class="social__item social__item--vm"></a>
-                                <a href="" class="social__item social__item--tw"></a>
-                                <a href="" class="social__item social__item--inst"></a>
+                                <a href="" class="social__item social__item fb"></a>
+                                <a href="" class="social__item social__item vm"></a>
+                                <a href="" class="social__item social__item tw"></a>
+                                <a href="" class="social__item social__item lnk"></a>
                             </div>
                         </div> <!-- end contacts__info -->
 
