--- a/rooms.html
+++ b/rooms.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Hostel</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"><!--[if IE]>
         <meta http-equiv="ImageResize" content="no">
         <meta http-equiv="ImageToolbar" content="no">
@@ -14,7 +14,8 @@
         <meta property="og:description" content="">
         <meta property="og:image" content="">
         <meta name="google-site-verification" content="">
-        <!--<link rel="shortcut icon" href="images/favicon.ico">-->
+
+        <link rel="icon" type="image/png" href="images/favicon.png" />
         
         <link rel="stylesheet" href="css/general.css">
     </head>
@@ -70,10 +71,10 @@
                     <div class="shadow"></div>
                     <footer>
                         <div class="social">
-                            <a href="" class="social__item social__item--fb"></a>
-                            <a href="" class="social__item social__item--vm"></a>
-                            <a href="" class="social__item social__item--tw"></a>
-                            <a href="" class="social__item social__item--inst"></a>
+                            <a href="" class="social__item social__item fb"></a>
+                            <a href="" class="social__item social__item vm"></a>
+                            <a href="" class="social__item social__item tw"></a>
+                            <a href="" class="social__item social__item lnk"></a>
                         </div>
                         <div class="builtAt">built at: <span>gamidov studio</span></div>
                     </footer>
@@ -97,8 +98,8 @@
 
         <main class="viewport">
             <div class="column column--content column--full content scroll">
-                <h1 class="heading">01. ABOUT HOSTEL</h1>
-                <h2>We worked so hard to ensure that guests feel as comfortable as we</h2>
+                <h1 class="heading">02. ROOMS</h1>
+                <h2>24 rooms of different categories</h2>
 
                 <div class="rooms">
                     <div class="room">
