--- a/rooms.html
+++ b/rooms.html
@@ -120,13 +120,22 @@
                             <div class="column column--content">
                                 <article class="content scroll">
                                     <span class="heading">02. rooms <button class="back"><i>&larr;</i> Back</button></span>
-                                    <h2>We worked so hard to ensure that guests feel as comfortable as we</h2>
+                                    <h2>TWO-BEDDED ROOM, 14 SQ.M.</h2>
                                     <hr>
-                                    <p>Our guests can enjoy completely free spacious kitchen-dining room, equipped with all necessary utensils and appliances, from refrigerators and cooking surfaces prior to the microwave oven and dishwasher.</p>
+                                    <p>Standard Quadruple Room 10 sq.m. It equipped with bunk beds with a size bed 1000h2000. All beds are equipped with personal outlets and individual lighting.</p>
+                                    <p>The room also has a personal safe, provided free of charge, a mirror and a clothes hanger. Access to the Internet via WiFi in the room free of charge.</p>
                                     <div class="services">
                                         <div class="paid">
-                                            <h3 class="services__title">PAID SERVICES:</h3>
+                                            <h3 class="services__title">SERVICES AND COMFORT:</h3>
                                             <ul class="services__list">
+                                                <li>Landmark View</li>
+                                                <li>View Of The City</li>
+                                                <li>Air Conditioning</li>
+                                                <li>Ironing Facilities</li>
+                                                <li>Landmark View</li>
+                                                <li>View Of The City</li>
+                                                <li>Air Conditioning</li>
+                                                <li>Ironing Facilities</li>
                                                 <li>Landmark View</li>
                                                 <li>View Of The City</li>
                                                 <li>Air Conditioning</li>
@@ -134,8 +143,9 @@
                                             </ul>
                                         </div>
                                     </div>
+                                    <hr>
+                                    <button class="button button--book-now">book now</button>
                                 </article> <!-- end content -->
-                                <a href="#" class="services-link">Free & Paid services</a>
                             </div> <!-- end column -->
 
                             <div class="column column--media">
